[package]
name = "morphyne"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "morphyne"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
morphine = { path = "../morphine" }
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
rand = "0.8.5"
serde_json = "1.0.91"
