[package]
name = "morphyne"
version = "0.2.0"
edition = "2021"

[lib]
name = "morphyne"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
morphine = { path = "../morphine" }
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
rand = "0.8.5"
serde_json = "1.0.91"
statrs = "0.16.0"
is_sorted = "0.1.1"
